# high-perf-trading

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  KNOWN_ISSUES.md  PROJECT_CONTEXT.md  README.md  TEST_DISTRIBUTED.md  bacon.toml  engines.toml  engines.toml.example  justfile  run_benchmark.sh  start_engines.sh  start_gateway.sh  test_cancel_replace.py  test_client.rs  test_risk.sh  test_risk_reject.sh
.github/workflows/: ci.yml
crates/admin_http/: Cargo.toml
crates/admin_http/src/: main.rs  metrics.rs  server.rs
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/codecs/: Cargo.toml
crates/codecs/benches/: binary_codec.rs
crates/codecs/src/: binary.rs  codec.rs  json.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: gateway_protocol.rs  lib.rs  metrics.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/benches/: engine_step.rs
crates/engine/src/: account_manager.rs  engine.rs  engine_tests.rs  lib.rs  order_book.rs  types.rs
crates/engine_server/: Cargo.toml
crates/engine_server/src/: admin_server.rs  config.rs  gateway_connection.rs  lib.rs  main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs  server.rs
crates/gateway_server/: Cargo.toml
crates/gateway_server/src/: account_manager.rs  auth.rs  client_handler.rs  config.rs  engine_router.rs  main.rs  persistence.rs  reconciliation.rs  session.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: admin_server.rs  config.rs  connection.rs  gateway.rs  lib.rs  main.rs  protocol.rs  router.rs
crates/test_client/: Cargo.toml
crates/test_client/src/: main.rs
scripts/: run_benchmark.sh  start_engines.sh  start_gateway.sh  test_cancel_replace.sh  test_risk.sh  test_risk_reject.sh
