[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/engine",
  "crates/codecs",
  "crates/persistence",
  "crates/server",
  "crates/bench",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2.0.17"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

hdrhistogram = "7"
crossbeam-channel = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
crc32fast = "1"

bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

clap = { version = "4", features = ["derive"] }
slab = "0.4.11"
# admin HTTP
axum = "0.8.8"
prometheus = "0.14.0"
once_cell = "1"

# benches
criterion = "0.8.1"