[package]
name = "bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
anyhow.workspace = true
clap.workspace = true
hdrhistogram.workspace = true
serde_json.workspace = true
postcard.workspace = true
common = { path = "../common" }
