[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
admin_http = { path = "../admin_http"}
persistence = { path = "../persistence" }
crossbeam-channel.workspace = true
tracing.workspace = true
slab.workspace = true
serde.workspace = true
postcard.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true
crossbeam-channel.workspace = true

[[bench]]
name = "engine_step"
harness = false
