[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
persistence = { path = "../persistence" }
crossbeam-channel.workspace = true
tokio = { workspace = true, features = ["sync"] }  # For oneshot channel in queries
tracing.workspace = true
slab.workspace = true
serde.workspace = true
postcard.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true
crossbeam-channel.workspace = true

[[bench]]
name = "engine_step"
harness = false