[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
codecs = { path = "../codecs" }
admin_http = { path = "../admin_http"}
persistence = { path = "../persistence" }
tokio.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true

