[package]
name = "gateway_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gateway_server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
codecs = { path = "../codecs" }
persistence = { path = "../persistence" }
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
axum.workspace = true
dashmap = "6.1"
serde.workspace = true
toml.workspace = true
postcard.workspace = true