[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
codecs = { path = "../codecs" }
persistence = { path = "../persistence" }
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
axum.workspace = true